syntax = "proto3";

package flyteidl_flink;

option go_package = "flyteidl-flink";

message Resource {
  // Value must be a valid k8s quantity. See
  // https://github.com/kubernetes/apimachinery/blob/master/pkg/api/resource/quantity.go#L30-L80
  message Quantity { string string = 1; }

  message PersistentVolume {
    enum Type {
      PD_STANDARD = 0;
      PD_SSD = 1;
    }

    Type type = 1;
    Quantity size = 2;
  }

  Quantity cpu = 1;
  Quantity memory = 2;
  PersistentVolume persistentVolume = 3;
}

message JobManager { Resource resource = 1; }

message TaskManager {
  Resource resource = 1;
  int32 replicas = 2;
}

// Custom Proto for Flink Plugin.
message FlinkJob {
  string jarFile = 1;
  string mainClass = 2;
  repeated string args = 3;
  map<string, string> flinkProperties = 4;

  JobManager jobManager = 5;
  TaskManager taskManager = 6;
  string serviceAccount = 7;
  string image = 8;
}

message JobExecutionInfo { string id = 1; }

message JobManagerExecutionInfo { repeated string ingressURLs = 1; }

message FlinkExecutionInfo {
  JobExecutionInfo job = 1;
  JobManagerExecutionInfo jobManager = 2;
}
